[package]
name = "zk-paillier"
version = "0.4.4"
edition = "2018"
description = "Collection of Paillier cryptosystem zero knowledge proofs written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.9"
digest = "0.9"
thiserror = "1"

num-bigint = { version = "0.4", features = ["serde"], optional = true }
curv = { package = "curv-kzen", git="https://github.com/EfficientPrivacyTech/curv.git"} #, rev = "fcb7ac3" }
# curv = { package = "curv-kzen", git="https://github.com/ZenGo-X/curv.git", rev="44537a74", default-features=false, features=["num-bigint"]}

#[dependencies.curv-kzen]
#version = "0.10"
#default-features = false

paillier = { package = "kzen-paillier", git = "https://github.com/EfficientPrivacyTech/rust-paillier.git", default-features = false }
#[dependencies.paillier]
#package = "kzen-paillier"
#version = "0.4.3"
#default-features = false

[dev-dependencies]
criterion = "0.3"

[features]
default = ["curv/rust-gmp-kzen"]

[[bench]]
name = "all"
harness = false
